
if disable_posix_option
	subdir_done()
endif
libc_sources += files(
	'generic/arpa-inet-stubs.cpp',
	'generic/dirent-stubs.cpp',
	'generic/dlfcn-stubs.cpp',
	'generic/fcntl-stubs.cpp',
	'generic/ftw-stubs.cpp',
	'generic/glob-stubs.cpp',
	'generic/grp-stubs.cpp',
	'generic/langinfo-stubs.cpp',
	'generic/libgen-stubs.cpp',
	'generic/netdb-stubs.cpp',
	'generic/net-if-stubs.cpp',
	'generic/posix_signal.cpp',
	'generic/posix_stdio.cpp',
	'generic/posix_stdlib.cpp',
	'generic/posix_string.cpp',
	'generic/pthread-stubs.cpp',
	'generic/pwd-stubs.cpp',
	'generic/regex.cpp',
	'generic/sched-stubs.cpp',
	'generic/spawn-stubs.cpp',
	'generic/strings-stubs.cpp',
	'generic/sys-file-stubs.cpp',
	'generic/syslog-stubs.cpp',
	'generic/sys-mman-stubs.cpp',
	'generic/sys-resource-stubs.cpp',
	'generic/sys-select-stubs.cpp',
	'generic/sys-socket-stubs.cpp',
	'generic/sys-statfs-stubs.cpp',
	'generic/sys-stat-stubs.cpp',
	'generic/sys-statvfs-stubs.cpp',
	'generic/sys-times.cpp',
	'generic/sys-time-stubs.cpp',
	'generic/sys-uio.cpp',
	'generic/sys-utsname-stubs.cpp',
	'generic/sys-wait-stubs.cpp',
	'generic/termios-stubs.cpp',
	'generic/unistd-stubs.cpp',
	'generic/utime-stubs.cpp',
	'musl-generic/fnmatch.cpp',
)

install_headers(
	'include/byteswap.h',
	'include/dirent.h',
	'include/dlfcn.h',
	'include/endian.h',
	'include/fcntl.h',
	'include/fnmatch.h',
	'include/ftw.h',
	'include/glob.h',
	'include/grp.h',
	'include/langinfo.h',
	'include/libgen.h',
	'include/netdb.h',
	'include/pthread.h',
	'include/pwd.h',
	'include/regex.h',
	'include/sched.h',
	'include/spawn.h',
	'include/strings.h',
	'include/syslog.h',
	'include/termios.h',
	'include/unistd.h',
	'include/utime.h',
)
install_headers(
	'include/arpa/inet.h',
	subdir: 'arpa'
)
install_headers(
	'include/net/if.h',
	subdir: 'net'
)
install_headers(
	'include/netinet/in.h',
	'include/netinet/ip.h',
	subdir: 'netinet'
)
install_headers(
	'include/sys/file.h',
	'include/sys/mman.h',
	'include/sys/param.h',
	'include/sys/resource.h',
	'include/sys/select.h',
	'include/sys/socket.h',
	'include/sys/statfs.h',
	'include/sys/stat.h',
	'include/sys/statvfs.h',
	'include/sys/time.h',
	'include/sys/times.h',
	'include/sys/types.h',
	'include/sys/uio.h',
	'include/sys/un.h',
	'include/sys/utsname.h',
	'include/sys/vfs.h',
	'include/sys/wait.h',
	subdir: 'sys'
)
install_headers(
	'include/bits/posix/blkcnt_t.h',
	'include/bits/posix/blksize_t.h',
	'include/bits/posix/dev_t.h',
	'include/bits/posix/fsblkcnt_t.h',
	'include/bits/posix/fsfilcnt_t.h',
	'include/bits/posix/gid_t.h',
	'include/bits/posix/id_t.h',
	'include/bits/posix/in_addr_t.h',
	'include/bits/posix/ino_t.h',
	'include/bits/posix/in_port_t.h',
	'include/bits/posix/iovec.h',
	'include/bits/posix/locale_t.h',
	'include/bits/posix/map_flags.h',
	'include/bits/posix/mode_t.h',
	'include/bits/posix/nlink_t.h',
	'include/bits/posix/nl_item.h',
	'include/bits/posix/off_t.h',
	'include/bits/posix/pid_t.h',
	'include/bits/posix/posix_errno.h',
	'include/bits/posix/posix_signal.h',
	'include/bits/posix/posix_stdio.h',
	'include/bits/posix/posix_stdlib.h',
	'include/bits/posix/posix_string.h',
	'include/bits/posix/sa_family_t.h',
	'include/bits/posix/siginfo_t.h',
	'include/bits/posix/socklen_t.h',
	'include/bits/posix/ssize_t.h',
	'include/bits/posix/stat.h',
	'include/bits/posix/suseconds_t.h',
	'include/bits/posix/timeval.h',
	'include/bits/posix/uid_t.h',
	subdir: 'bits/posix'
)
